# prevabs

./: .buildinfo  .gitignore  .gitmodules  .txt  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CUserstian50AppDataLocalTempbuild_out.txt  DEVLOG.md  LICENSE  MaterialDB.xml  README.md  _CMakeLists.txt  build_all_mingw64_cygwin.bat  build_mingw_64.bat  build_msvc.bat  build_prevabs_mingw64_cygwin.bat  dependencies.dot  genindex.html  index.html  myst_substitutions.html  objects.inv  prevabs.example.json  pyproject.toml  search.html  searchindex.js  version.h.in
.claude/: settings.json  settings.local.json
.github/workflows/: build_sphinx_dox.yml  release.yml
_downloads/0f52e4beebf08bb757bdcea0efeae7f8/: materials.xml
_downloads/15dff70bc69aa3786bf49d2b4d661ca9/: mh104_9webs.xml
_downloads/1b0d566afb0c295fe94054bb28ed5758/: material_database.xml
_downloads/6940085de6fd33ab43083115d86737fd/: box_cus.xml
_downloads/7878f26f2c9f93a2c2c87bd3ef85e932/: prevabs.xsd
_downloads/935fde50586c971e3b650b6ee766e8f2/: mh104.sg.opt
_downloads/94c59a26e695b99363b9ec8614d71a21/: mh104.xml
_downloads/9a85721655093cd7b68f1b601056d58a/: tube.xml
_downloads/a09cda764092d5d5d53dfc44082211c6/: uh60a.sg.ech
_downloads/c699a636019bac53489f467afddbcc65/: i_web.xml
_downloads/e1ea88df7eac2110cd9d66d95e2d0d91/: uh60a_section.xml
_downloads/e81867065cf5ca3835a28935d21c7dfc/: mh104.xml
_downloads/e8df671756c1ab78841ea7b5f2b4ca99/: box.xml
_downloads/fa8ced667dbc6a8b942eb1b9cc47cc5e/: cs_main.xml
_sources/: index.rst.txt  myst_substitutions.md.txt
_sources/contents/: tutorial.rst.txt
_static/: custom.css  documentation_options.js
contents/: tutorial.html
contents/examples/: example_airfoil.html  example_airfoil_cspar.html  example_airfoil_dspar.html  example_airfoil_multi-cells.html  example_airfoil_recover.html  example_box.html  example_box_ii_quad.html  example_box_nested_webs.html  example_channel.html  example_ibeam.html  example_pipe.html  example_tube.html  example_uh60a.html  example_uh60a_fi.html  index.html
contents/guide/: component-dependency.html  component-fill.html  component.html  (+26 more)
gmsh-3.0.6-source/: CMakeLists.txt  build_gui_linux_64.sh
include/: AppConfigIO.hpp  CrossSection.hpp  CurveFrameLookup.hpp  DCELConfig.hpp  DCELSweepLine.hpp  DCELValidator.hpp  GeometryRepository.hpp  GmshApi.hpp  ISGWriter.hpp  Material.hpp  MaterialRepository.hpp  MeshData.hpp  PArea.hpp  PBST.hpp  PBaseLine.hpp  PComponent.hpp  PConfig.hpp  PDCEL.hpp  PDCELFace.hpp  PDCELFaceData.hpp  PDCELHalfEdge.hpp  PDCELHalfEdgeLoop.hpp  PDCELTransaction.hpp  PDCELUtils.hpp  PDCELValidator.hpp  PDCELVertex.hpp  PDCELVertexData.hpp  PDataClasses.hpp  PEdge.hpp  PFilling.hpp  PGeoClasses.hpp  PGeoLine.hpp  PGeoLineSegment.hpp  PMeshClasses.hpp  PModel.hpp  PModelIO.hpp  PSegment.hpp  adaptive_thickness.hpp  curve.hpp  declarations.hpp  (+20 more)
lib/: libGmsh-3.0.def  libGmsh.so.3.0  spdlog.exp  spdlog.lib
local/: design-review-20260213.md  fixes-20260216-intersect-cpp.md  fixes-20260216-offset-cpp.md  fixes-20260217-join-cpp.md  issue-20260214-break-global-config-dependency.md  issue-20260214-remove-pmodel-backpointers.md  issue-20260214-split-pmodel-repositories.md  review-20260213.md  review-20260214-io.md  review-20260216-geo-cpp.md  review-20260216-geo.md  review-20260216-intersect-cpp.md  review-20260216-join-cpp.md  review-20260216-offset-cpp.md
scripts/: dp_matcher_prototype.py
share/: MaterialDB.xml  overview-template.xml  prevabs-input.xsd  prevabs.json
src/: GeometryRepository.cpp  MaterialRepository.cpp  execu.cpp  execu_utils.cpp  globalConstants.cpp  main.cpp  overloadOperator.cpp  plog.cpp  pretest.cpp  pui.cpp  utilities.cpp
test/: _tmp_dcel.txt  build-unit-tests.cmd  build-unit-tests.ps1  dcel.txt  run-integration-tests.cmd  run-integration-tests.ps1  run-integration-tests.sh  run_integration_tests.bat  run_with_timeout.ps1  test_all_examples.bat
test/geo_library/: CMakeLists.txt  build_msvc.bat  main.cpp
test/geo_library/clipper2/: CMakeLists.txt  airfoil_loader.cpp  airfoil_loader.hpp  build-clipper2-airfoil-tests.ps1  geom_assertions.cpp  geom_assertions.hpp  inflate.cpp  svg_dump.cpp  svg_dump.hpp  test_clipper2_airfoil.cpp
test/geo_library/gmsh/: CMakeLists.txt  adapt_mesh.cpp  offset.cpp  t1.cpp  t16.cpp
test/geo_library/gmsh/1.5_remove_duplicate_mesh_vertices/: material_database_us_ft.xml
test/geo_library/homog2d/: CMakeLists.txt  intersect.cpp  offset.cpp
test/integration/geo_library/clipper2/: CMakeLists.txt  offset.cpp
test/integration/t0_dcel/: CMakeLists.txt  README.md  build.ps1  t0_dcel.cpp
test/integration/t0_offset_clipper2/: CMakeLists.txt  README.md  build.ps1  compare_resample.cpp  mh104_te_only.xml  phase0_layered_v.cpp  test_offset_map.cpp
test/integration/t0_offset_clipper2/expected_out/: airfoil_mh104_te_open_compare.json  open_te_cusp_like_compare.json  open_v_cusp_shallow_compare.json  phase0_strip_bend_nonuniform.txt  phase0_tent_sharp_convex.txt
test/unit/: CMakeLists.txt  jsonc_loader.hpp  test_adaptive_thickness.cpp  test_app_config.cpp  test_common.hpp  test_curve_frame_lookup.cpp  test_dcel.cpp  test_execu_timeout.cpp  test_geo.cpp  test_geo_offset.cpp  test_geometry_tolerance.cpp  test_io_airfoil.cpp  test_io_airfoil_user_le_te.cpp  test_io_baseline.cpp  test_io_basepoint.cpp  test_io_component_laminate.cpp  test_io_material.cpp  test_io_p6_helpers.cpp  test_io_point_on_airfoil.cpp  test_main_pipeline.cpp  test_offset.jsonc  test_offset_clipper2.cpp  test_parse_helpers.cpp  test_pui.cpp  test_variable_offset.cpp
test/unittest/: CMakeLists.txt  GeometryRepositoryTest.cpp  MaterialRepositoryTest.cpp  PDCELVertex.cpp  PGeoClasses.cpp  build_mingw64.bat  unittest.cpp
tools/: build-msvc.cmd  build-msvc.ps1  build-ninja.ps1  build-wsl.sh  build_all_linux_64.sh  build_all_mingw64_cygwin.bat  build_all_mingw64_cygwin.stdout  build_all_mingw64_msys2.sh  build_linux_64.sh  build_msvc.bat  clean-example-files.py  prevabs linking.txt
unittest/: PDCELVertex.hpp  PGeoClasses.hpp  geo.cpp  geo.hpp  unittest.cpp
(+1368 files in other folders)
