[project]
name = "prevabs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "myst-parser>=4.0.1",
    "pydata-sphinx-theme>=0.17.1",
    "sphinx>=8.1.3",
    "sphinx-comments>=0.0.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-gallery>=0.21.0",
    "sphinx-prompt>=1.9.0",
    "sphinx-sitemap>=2.9.0",
]
